可以注册了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:name=".infrastructure.MyChatApplication"
 
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcherr"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
